--- a/src/ClassFormatter/ClassFormatter.csproj
+++ b/src/ClassFormatter/ClassFormatter.csproj
@@ -19,9 +19,10 @@
     <Message Text="ProjectDir: $(ProjectDir)" Importance="high" />
   </Target>
 
-  <Target Name="CleanReleaseFolder" AfterTargets="Publish">
-    <RemoveDir Directories="$(ProjectDir)bin" />
-    <Message Text="Carpeta Release eliminada" Importance="high" />
+  <Target Name="CleanReleaseFolder" BeforeTargets="Publish">
+    <RemoveDir Directories="$(ProjectDir)bin\Release" />
+    <RemoveDir Directories="$(ProjectDir)bin\Debug" ContinueOnError="true" />
+    <Message Text="Release and Debug folders deleted" Importance="high" />
   </Target>
 
 </Project>
