Checkpoint: better tests

--- a/tests/UnityClassFormatter.Tests/UnityClassFormatter.Tests.csproj
+++ b/tests/UnityClassFormatter.Tests/UnityClassFormatter.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ClassFormatter\ClassFormatter.csproj" />
+    <ProjectReference Include="..\..\src\UnityClassFormatter\UnityClassFormatter.csproj" />
   </ItemGroup>
 
 </Project>
